[tool.poetry]
name = "openfabric-test"
version = "1.1"
description = "cognitive-assistant"
authors = ["Andrei"]

[tool.poetry.dependencies]
python = "^3.8"
openfabric-pysdk = "0.1.11"
scipy = "^1.8.0"
scikit-learn="1.0.2"
pandas = "^1.3.5"
nltk = "^3.7"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
flask = "2.0.2"
Werkzeug="2.0.1"
flask-socketio="4.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
